--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,6 @@ INCLUDES = -I$(top_srcdir)/include
 lib_LTLIBRARIES = libcgroup.la
 libcgroup_la_SOURCES = parse.y lex.l api.c config.c libcgroup-internal.h libcgroup.map wrapper.c
 libcgroup_la_LIBADD = -lpthread
-libcgroup_la_LDFLAGS = -Wl,--version-script,libcgroup.map \
+libcgroup_la_LDFLAGS = -Wl,--version-script,$(srcdir)/libcgroup.map \
 	-version-number $(LIBRARY_VERSION_MAJOR):$(LIBRARY_VERSION_MINOR):$(LIBRARY_VERSION_RELEASE)
 
