--- a/src/daemon/Makefile.am
+++ b/src/daemon/Makefile.am
@@ -4,7 +4,7 @@ if WITH_DAEMON
 
 sbin_PROGRAMS = cgrulesengd
 cgrulesengd_SOURCES = cgrulesengd.c cgrulesengd.h
-cgrulesengd_LDADD = $(top_srcdir)/src/.libs/libcgroup.la -lrt
-cgrulesengd_LDFLAGS = -L$(top_srcdir)/src/.libs
+cgrulesengd_LDADD = $(top_builddir)/src/.libs/libcgroup.la -lrt
+cgrulesengd_LDFLAGS = -L$(top_builddir)/src/.libs
 
 endif
