--- a/configure.in
+++ b/configure.in
@@ -15,13 +15,13 @@
 AC_PREREQ(2.61)
 
 # In following section update all occurences of version, including soname
-AC_INIT([libcgroup], 0.34,
+AC_INIT([libcgroup], 0.35,
 	[http://sourceforge.net/tracker/?group_id=218421&atid=1043649])
 AM_INIT_AUTOMAKE([foreign dist-bzip2])
 # set library version, soname is libcgroup.so.MAJOR
 AC_SUBST(LIBRARY_VERSION_MAJOR, 1)
 AC_SUBST(LIBRARY_VERSION_MINOR, 0)
-AC_SUBST(LIBRARY_VERSION_RELEASE, 34)
+AC_SUBST(LIBRARY_VERSION_RELEASE, 35)
 
 # we do not want static libraries
 AC_DISABLE_STATIC
@@ -131,7 +131,11 @@ if test x$with_pam = xtrue; then
 	AC_CHECK_LIB(
 		[pam],
 		[pam_syslog],
-		[],
+		[
+			dnl Override the default behavior of AC_CHECK_LIB,
+			dnl we don't want -lpam in LIBS.
+			:
+		],
 		[AC_MSG_ERROR([Cannot compile PAM module without libpam!])])
 
 	AC_CHECK_HEADERS(
