Imported Upstream version 0.36

--- a/doc/man/Makefile.am
+++ b/doc/man/Makefile.am
@@ -1,5 +1,5 @@
 man_MANS = cgclassify.1 cgconfig.conf.5 cgconfigparser.8 cgexec.1 cgred.conf.5 \
-           cgrules.conf.5 cgrulesengd.8 cgcreate.1 cgset.1 cgclear.1
+           cgrules.conf.5 cgrulesengd.8 cgcreate.1 cgset.1 cgclear.1 cgget.1
 
 EXTRA_DIST = $(man_MANS)
 
