--- a/samples/Makefile.am
+++ b/samples/Makefile.am
@@ -1,1 +1,1 @@
-EXTRA_DIST = cgconfig.conf cgred.conf cgrules.conf cgconfig.sysdefault
+EXTRA_DIST = cgconfig.conf cgred.conf cgrules.conf cgconfig.sysconfig
