--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,6 @@ AUTOMAKE_OPTIONS = foreign
 SUBDIRS = dist doc include samples scripts src tests
 
 EXTRA_DIST = README_daemon libcgroup.doxyfile
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libcgroup.pc
