--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = init.d/cgconfig.in init.d/cgred.in
 
-INITSCRIPTDIR=$(DESTDIR)/etc/init.d
+INITSCRIPTDIR=$(DESTDIR)/etc/rc.d/init.d
 install-exec-hook:
 	mkdir -p $(INITSCRIPTDIR)
 	cp init.d/cgconfig init.d/cgred $(INITSCRIPTDIR)
