--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 
 override_dh_auto_configure:
 	autoreconf --install --force
-	dh_auto_configure
+	dh_auto_configure -- --libdir /lib
 
 override_dh_installinit:
 	cp scripts/init.d/cgconfig debian/cgroup-bin.cgconfig.init
@@ -14,7 +14,7 @@ override_dh_installinit:
 
 override_dh_install:
 	mkdir -p debian/tmp/lib/security
-	cp debian/tmp/usr/lib/pam_cgroup.so.0.0.0 debian/tmp/lib/security/pam_cgroup.so
+	cp debian/tmp/lib/pam_cgroup.so.0.0.0 debian/tmp/lib/security/pam_cgroup.so
 	dh_install
 
 override_dh_makeshlibs:
