--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -55,61 +55,61 @@ am_get_all_controller_OBJECTS = get_all_controller.$(OBJEXT)
 get_all_controller_OBJECTS = $(am_get_all_controller_OBJECTS)
 get_all_controller_LDADD = $(LDADD)
 get_all_controller_DEPENDENCIES =  \
-	$(top_srcdir)/src/.libs/libcgroup.la
+	$(top_builddir)/src/.libs/libcgroup.la
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
 am_get_controller_OBJECTS = get_controller.$(OBJEXT)
 get_controller_OBJECTS = $(am_get_controller_OBJECTS)
 get_controller_LDADD = $(LDADD)
-get_controller_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+get_controller_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_get_mount_point_OBJECTS = get_mount_point.$(OBJEXT)
 get_mount_point_OBJECTS = $(am_get_mount_point_OBJECTS)
 get_mount_point_LDADD = $(LDADD)
-get_mount_point_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+get_mount_point_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_get_variable_names_OBJECTS = get_variable_names.$(OBJEXT)
 get_variable_names_OBJECTS = $(am_get_variable_names_OBJECTS)
 get_variable_names_LDADD = $(LDADD)
 get_variable_names_DEPENDENCIES =  \
-	$(top_srcdir)/src/.libs/libcgroup.la
+	$(top_builddir)/src/.libs/libcgroup.la
 am_libcg_ba_OBJECTS = libcg_ba.$(OBJEXT)
 libcg_ba_OBJECTS = $(am_libcg_ba_OBJECTS)
 libcg_ba_LDADD = $(LDADD)
-libcg_ba_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+libcg_ba_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_libcgrouptest01_OBJECTS = libcgrouptest01.$(OBJEXT) \
 	test_functions.$(OBJEXT)
 libcgrouptest01_OBJECTS = $(am_libcgrouptest01_OBJECTS)
 libcgrouptest01_LDADD = $(LDADD)
-libcgrouptest01_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+libcgrouptest01_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_pathtest_OBJECTS = pathtest.$(OBJEXT)
 pathtest_OBJECTS = $(am_pathtest_OBJECTS)
 pathtest_LDADD = $(LDADD)
-pathtest_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+pathtest_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_proctest_OBJECTS = proctest.$(OBJEXT)
 proctest_OBJECTS = $(am_proctest_OBJECTS)
 proctest_LDADD = $(LDADD)
-proctest_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+proctest_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_read_stats_OBJECTS = read_stats.$(OBJEXT)
 read_stats_OBJECTS = $(am_read_stats_OBJECTS)
 read_stats_LDADD = $(LDADD)
-read_stats_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+read_stats_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_setuid_OBJECTS = setuid.$(OBJEXT)
 setuid_OBJECTS = $(am_setuid_OBJECTS)
 setuid_LDADD = $(LDADD)
-setuid_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+setuid_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_test_named_hierarchy_OBJECTS = test_named_hierarchy.$(OBJEXT)
 test_named_hierarchy_OBJECTS = $(am_test_named_hierarchy_OBJECTS)
 test_named_hierarchy_LDADD = $(LDADD)
 test_named_hierarchy_DEPENDENCIES =  \
-	$(top_srcdir)/src/.libs/libcgroup.la
+	$(top_builddir)/src/.libs/libcgroup.la
 am_walk_task_OBJECTS = walk_task.$(OBJEXT)
 walk_task_OBJECTS = $(am_walk_task_OBJECTS)
 walk_task_LDADD = $(LDADD)
-walk_task_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+walk_task_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 am_walk_test_OBJECTS = walk_test.$(OBJEXT)
 walk_test_OBJECTS = $(am_walk_test_OBJECTS)
 walk_test_LDADD = $(LDADD)
-walk_test_DEPENDENCIES = $(top_srcdir)/src/.libs/libcgroup.la
+walk_test_DEPENDENCIES = $(top_builddir)/src/.libs/libcgroup.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -230,6 +230,7 @@ PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
+PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
@@ -282,6 +283,7 @@ lt_ECHO = @lt_ECHO@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pamlibdir = @pamlibdir@
 pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
@@ -295,7 +297,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 INCLUDES = -I$(top_srcdir)/include
-LDADD = $(top_srcdir)/src/.libs/libcgroup.la
+LDADD = $(top_builddir)/src/.libs/libcgroup.la
 libcgrouptest01_SOURCES = libcgrouptest01.c test_functions.c libcgrouptest.h
 libcg_ba_SOURCES = libcg_ba.cpp
 setuid_SOURCES = setuid.c
