--- a/src/pam/Makefile.am
+++ b/src/pam/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = -I $(top_srcdir)/include
 
 if WITH_PAM
 
-lib_LTLIBRARIES = pam_cgroup.la
+pamlib_LTLIBRARIES = pam_cgroup.la
 pam_cgroup_la_SOURCES = pam_cgroup.c
 pam_cgroup_la_LDFLAGS = -module
 pam_cgroup_la_LIBADD = $(top_builddir)/src/.libs/libcgroup.la -lpam
