--- a/samples/Makefile.in
+++ b/samples/Makefile.in
@@ -179,7 +179,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-EXTRA_DIST = cgconfig.conf cgred.conf cgrules.conf cgconfig.sysconfig
+EXTRA_DIST = cgconfig.conf cgred.conf cgrules.conf cgconfig.sysconfig \
+             cgsnapshot_blacklist.conf
+
 all: all-am
 
 .SUFFIXES:
