--- a/scripts/init.d/cgred.in
+++ b/scripts/init.d/cgred.in
@@ -34,6 +34,7 @@
 
 prefix=@prefix@;exec_prefix=@exec_prefix@;sbindir=@sbindir@
 CGRED_BIN=$sbindir/cgrulesengd
+CGRED_CONF=/etc/cgrules.conf
 
 # Sanity checks
 [ -x $CGRED_BIN ] || exit 1
@@ -47,7 +48,13 @@ if [ -f "/etc/sysconfig/cgred.conf" ] ; then
 	. /etc/sysconfig/cgred.conf
 	OPTIONS="$NODAEMON $LOG"
 	if [ -n "$LOG_FILE" ]; then
-		OPTIONS="$OPTIONS --log-file=$LOG_FILE"
+		OPTIONS="$OPTIONS --logfile=$LOG_FILE"
+	fi
+	if [ -n "$SOCKET_USER" ]; then
+		OPTIONS="$OPTIONS -u $SOCKET_USER"
+	fi
+	if [ -n "$SOCKET_GROUP" ]; then
+		OPTIONS="$OPTIONS -g $SOCKET_GROUP"
 	fi
 else
 	OPTIONS=""
@@ -62,14 +69,26 @@ RETVAL=0
 
 start()
 {
-	echo $"Starting CGroup Rules Engine Daemon..."
+	echo -n $"Starting CGroup Rules Engine Daemon: "
 	if [ -f "/var/lock/subsys/$servicename" ] ; then
 		log_failure_msg "$servicename is already running with PID `cat ${pidfile}`"
+		return 0
+	fi
+	if [ ! -s $CGRED_CONF ]; then
+		log_failure_msg "not configured"
+		return 6
+	fi
+	if ! grep "^cgroup" /proc/mounts &>/dev/null; then
+		echo
+		log_failure_msg $"Cannot find cgroups, is cgconfig service running?"
 		return 1
 	fi
 	daemon --check $servicename --pidfile $pidfile $CGRED_BIN $OPTIONS
 	RETVAL=$?
 	echo
+	if [ $RETVAL -ne 0 ]; then
+		return 7
+	fi
 	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/$servicename
 	echo "`pidof $processname`" > $pidfile
 }
@@ -77,6 +96,10 @@ start()
 stop()
 {
 	echo -n $"Stopping CGroup Rules Engine Daemon..."
+	if [ ! -f $pidfile ]; then
+		log_success_msg
+		return 0
+	fi
 	killproc -p $pidfile $processname -TERM
 	RETVAL=$?
 	echo
@@ -84,19 +107,20 @@ stop()
 		rm -f /var/lock/subsys/$servicename
 		rm -f $pidfile
 	fi
-	log_success_msg
 }
 
 # See how we are called
 case "$1" in
 	start)
 		start
+		RETVAL=$?
 		;;
 	stop)
 		stop
+		RETVAL=$?
 		;;
 	status)
-		status -p $pidfile $processname
+		status -p $pidfile $servicename
 		RETVAL=$?
 		;;
 	restart)
@@ -125,6 +149,7 @@ case "$1" in
 		;;
 	*)
 		echo $"Usage: $0 {start|stop|status|restart|condrestart|reload}"
+		RETVAL=2
 		;;
 esac
 
