--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: libcgroup
 Priority: extra
 Maintainer: Jon Bernard <jbernard@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), quilt (>= 0.46-7), autoconf, automake, libtool, bison, flex, libpam0g-dev
 Standards-Version: 3.9.0
+Build-Depends: debhelper (>= 7.0.50~), autoconf, automake, libtool, bison, flex, libpam0g-dev
 Section: libs
 Vcs-Git: git://git.debian.org/git/collab-maint/libcgroup.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/libcgroup.git;a=summary
