--- a/configure.in
+++ b/configure.in
@@ -15,8 +15,7 @@
 AC_PREREQ(2.61)
 
 # In following section update all occurences of version, including soname
-AC_INIT([libcgroup], 0.37,
-	[http://sourceforge.net/tracker/?group_id=218421&atid=1043649])
+AC_INIT([libcgroup], 0.37.1)
 AM_INIT_AUTOMAKE([foreign dist-bzip2])
 
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
@@ -31,6 +30,19 @@ AC_DISABLE_STATIC
 
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADER([config.h])
+
+AC_ARG_ENABLE([bindings],
+	[AC_HELP_STRING([--enable-bindings],
+		[enable python bindings [default=no]])],
+	[
+		if test "x$enableval" = xno; then
+			with_bindings=false
+		else
+			with_bindings=true
+		fi
+	],
+	[with_bindings = false])
+AM_CONDITIONAL([WITH_BINDINGS], [test x$with_bindings = xtrue])
 
 # Process command line options
 AC_ARG_ENABLE([debug],
@@ -181,6 +193,7 @@ AC_CONFIG_FILES([Makefile
 	src/daemon/Makefile
 	src/tools/Makefile
 	src/pam/Makefile
+	src/bindings/Makefile
 	scripts/Makefile
 	scripts/init.d/cgconfig
 	scripts/init.d/cgred
