--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -162,7 +162,6 @@ libdir = @libdir@
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
-lt_ECHO = @lt_ECHO@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
@@ -371,8 +370,8 @@ uninstall-am:
 	uninstall uninstall-am uninstall-hook
 
 @WITH_INITSCRIPT_INSTALL_TRUE@install-exec-hook:
-@WITH_INITSCRIPT_INSTALL_TRUE@	mkdir -p $(INITSCRIPTDIR)
-@WITH_INITSCRIPT_INSTALL_TRUE@	cp init.d/cgconfig init.d/cgred $(INITSCRIPTDIR)
+@WITH_INITSCRIPT_INSTALL_TRUE@	$(INSTALL) -d $(INITSCRIPTDIR)
+@WITH_INITSCRIPT_INSTALL_TRUE@	$(INSTALL_SCRIPT) init.d/cgconfig init.d/cgred $(INITSCRIPTDIR)
 
 @WITH_INITSCRIPT_INSTALL_TRUE@uninstall-hook:
 @WITH_INITSCRIPT_INSTALL_TRUE@	rm -f $(INITSCRIPTDIR)/cgconfig $(INITSCRIPTDIR)/cgred
