Call configure with --enable-opaque-hierarchy="name=systemd"
This prevents to interact with the 'name=systemd' hierarchy

Closes: #664886

--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,8 @@
 
 override_dh_auto_configure:
 	autoreconf --install --force
-	dh_auto_configure -- --libdir /lib
+	dh_auto_configure -- --libdir /lib \
+                             --enable-opaque-hierarchy="name=systemd"
 
 override_dh_installinit:
 	cp scripts/init.d/cgconfig debian/cgroup-bin.cgconfig.init
