Imported Debian patch 0.40~rc1-3

--- a/debian/control
+++ b/debian/control
@@ -1,57 +1,81 @@
 Source: libcgroup
-Priority: extra
-Maintainer: Daniel Baumann <mail@daniel-baumann.ch>
-Build-Depends: debhelper (>= 9), dh-autoreconf, autotools-dev, bison, flex, libpam0g-dev
-Standards-Version: 3.9.4
+Priority: optional
 Section: libs
+Maintainer: Daniel Baumann <mail@daniel-baumann.ch>
+Build-Depends:
+ debhelper (>= 9),
+ dh-autoreconf,
+ autotools-dev,
+ bison,
+ flex,
+ libpam-dev,
+Standards-Version: 3.9.4
 Homepage: http://libcg.sourceforge.net/
 Vcs-Browser: http://daniel-baumann.ch/gitweb/?p=debian/packages/libcgroup.git
 Vcs-Git: git://daniel-baumann.ch/git/debian/packages/libcgroup.git
 
+Package: cgroup-bin
+Section: admin
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: control and monitor control groups (tools)
+ Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
+ of tasks, and all their future children, into hierarchical groups with
+ specialized behaviour.
+ .
+ libcgroup allows one to manipulate, control, administrate and monitor cgroups
+ and the associated controllers.
+ .
+ This package contains the command-line tools.
+
+Package: libcgroup1
+Section: libs
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: control and monitor control groups (library)
+ Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
+ of tasks, and all their future children, into hierarchical groups with
+ specialized behaviour.
+ .
+ libcgroup allows one to manipulate, control, administrate and monitor cgroups
+ and the associated controllers.
+ .
+ This package contains the shared library.
+
 Package: libcgroup-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, libcgroup1 (= ${binary:Version})
-Description: Development libraries to develop applications that utilize control groups
- Control Groups provide a mechanism for aggregating/partitioning sets of tasks,
- and all their future children, into hierarchical groups with specialized
- behaviour.
+Depends:
+ ${misc:Depends},
+ libcgroup1 (= ${binary:Version}),
+Description: control and monitor control groups (development)
+ Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
+ of tasks, and all their future children, into hierarchical groups with
+ specialized behaviour.
  .
- It provides API to create/delete and modify cgroup nodes. It will also in the
- future allow creation of persistent configuration for control groups and
- provide scripts to manage that configuration.
-
-Package: libcgroup1
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Library to control and monitor control groups
- Control Groups provide a mechanism for aggregating/partitioning sets of tasks,
- and all their future children, into hierarchical groups with specialized
- behaviour.
+ libcgroup allows one to manipulate, control, administrate and monitor cgroups
+ and the associated controllers.
  .
- This library allows applications to manipulate, control, administrate and
- monitor control groups and the associated controllers.
+ This package contains the development files.
 
 Package: libpam-cgroup
 Section: admin
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: PAM module to move a user session into a cgroup
- Control Groups provide a mechanism for aggregating/partitioning sets of tasks,
- and all their future children, into hierarchical groups with specialized
- behaviour.
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: control and monitor control groups (PAM)
+ Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
+ of tasks, and all their future children, into hierarchical groups with
+ specialized behaviour.
  .
- This PAM module will move a user session into an existing cgroup by attempting
- to match uid and gid against the defined cgroup rules configuration.
-
-Package: cgroup-bin
-Section: admin
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Tools to control and monitor control groups
- Control Groups provide a mechanism for aggregating/partitioning sets of tasks,
- and all their future children, into hierarchical groups with specialized
- behaviour.
- .
- These tools help manipulate, control, administrate and monitor control groups
+ libcgroup allows one to manipulate, control, administrate and monitor cgroups
  and the associated controllers.
+ .
+ This package contains the PAM module to move a user session into an existing
+ cgroup by attempting to match uid and gid against the defined cgroup rules
+ configuration.
