--- a/debian/rules
+++ b/debian/rules
@@ -1,20 +1,28 @@
 #!/usr/bin/make -f
+
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 %:
 	dh ${@} --with autoreconf,autotools_dev
 
 override_dh_auto_configure:
-	dh_auto_configure -- --libdir /lib --enable-opaque-hierarchy="name=systemd"
+	dh_auto_configure -- --libdir /lib/$(DEB_HOST_MULTIARCH) --enable-opaque-hierarchy="name=systemd"
 
 override_dh_auto_install:
 	dh_auto_install
 
+	# libcgroup-dev
+	mkdir -p debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
+	mv debian/tmp/lib/$(DEB_HOST_MULTIARCH)/*.so debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
+	mv debian/tmp/lib/$(DEB_HOST_MULTIARCH)/pkgconfig debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
+
 	# libpam-cgroup
-	mv debian/tmp/lib/security/pam_cgroup.so.0.0.0 debian/tmp/lib/security/pam_cgroup.so
-	rm -f debian/tmp/lib/security/pam_cgroup.so.0
+	mv debian/tmp/lib/$(DEB_HOST_MULTIARCH)/security/pam_cgroup.so.*.*.* debian/tmp/lib/$(DEB_HOST_MULTIARCH)/security/pam_cgroup.so
+	rm -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/security/pam_cgroup.so.*
 
 	# removing unused files
-	rm -f debian/tmp/lib/*.la
-	rm -f debian/tmp/lib/security/*.la
+	rm -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/*.la
+	rm -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/security/*.la
 
 override_dh_auto_test:
 	# disabled
@@ -22,8 +30,17 @@ override_dh_auto_test:
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
 
+override_dh_compress:
+	dh_compress -Xexamples
+
 override_dh_install:
 	dh_install --fail-missing
 
+override_dh_link:
+	# correcting symlink target
+	dh_link -plibcgroup-dev lib/$(DEB_HOST_MULTIARCH)/$$(basename $$(readlink debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libcgroup.so)) usr/lib/$(DEB_HOST_MULTIARCH)/libcgroup.so
+
+	dh_link --remaining-packages
+
 override_dh_makeshlibs:
-	dh_makeshlibs -X pam_cgroup.so
+	dh_makeshlibs -Xpam_cgroup.so
