--- a/debian/rules
+++ b/debian/rules
@@ -44,3 +44,6 @@ override_dh_link:
 
 override_dh_makeshlibs:
 	dh_makeshlibs -Xpam_cgroup.so
+
+override_dh_strip:
+	dh_strip --dbg-package=libcgroup-dbg
