Imported Debian patch 0.41-4

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libcgroup
 Priority: optional
 Section: libs
-Maintainer: Daniel Baumann <mail@daniel-baumann.ch>
+Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends:
  debhelper (>= 9),
  dh-autoreconf,
